add logo with small changes

--- a/src/main/webapp/WEB-INF/member/favorite.html
+++ b/src/main/webapp/WEB-INF/member/favorite.html
@@ -250,7 +250,7 @@
 									<div class="title">
 										<h4 id="activity_name"><a href="#">${activity.activityName}</a></h4>
 										<span>${activity.category}</span>
-										<span class="table-property-price">${activity.unitPrice}</span>
+										<span class="table-property-price">${activity.unitPrice} NT</span>
 									</div>
 								</td>
 								<td class="action">
