--- a/src/main/webapp/WEB-INF/supplier/supplierIndexSidebar.html
+++ b/src/main/webapp/WEB-INF/supplier/supplierIndexSidebar.html
@@ -4,7 +4,7 @@
 <!-- <aside class="main-sidebar sidebar-dark-primary elevation-4"> -->
     <!-- Brand Logo -->
     <a href="supplierIndex.html" class="brand-link">
-      <img src="../admin/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="../star-logo-nobg.png" style="width: 40px; height: 40px;"/>
       <span class="brand-text font-weight-light">Chile Tribe</span>
     </a>
 
