--- a/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
@@ -73,7 +73,7 @@
 							<div class="card-body pt-0">
 								<div class="inner_widget_link">
 									<ul class="no-ul-list navigation-list">
-										<li><a href="home-2.html">訂單資訊</a></li>
+										<li><a href="../order/order-lists.html">訂單資訊</a></li>
 									</ul>
 								</div>
 							</div>
@@ -101,7 +101,7 @@
 							<div class="card-body pt-0">
 								<div class="inner_widget_link">
 									<ul class="no-ul-list navigation-list">
-										<li><a href="">我的收藏</a></li>
+										<li><a href="./favorite.html">我的收藏</a></li>
 									</ul>
 								</div>
 							</div>
