--- a/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
@@ -163,7 +163,9 @@
 			member_id.value = member.memberid;
 			img_member_id.value = member.memberid;
 			if (member.photobase64 == null) {
-				photo_base64.src = 'https://placehold.co/500x500';
+// 				photo_base64.src = 'https://placehold.co/500x500';
+				photo_base64.src = '../activity/asset/no-image.jpg';
+				
 				console.log("照片是空的");
 			} else {
 				photo_base64.src = 'data:image/png;base64,' + member.photobase64;
