--- a/src/main/webapp/WEB-INF/member/login.html
+++ b/src/main/webapp/WEB-INF/member/login.html
@@ -62,7 +62,7 @@
 			<div class="modal-divider">
 				<span>或其他登入方式</span>
 			</div>
-			<div class="social-login mb-3">
+			<div class="social-login mb-3" id="div_google">
 				<ul>
 					<li><a href="#" class="btn connect-google" id="btn_googlelogin">
 							<i class="ti-google"></i>Google+</a></li>
@@ -88,31 +88,34 @@
 
 
 
-	// to do list 完成被勾選要記住帳號密碼&沒被勾選要清空cookie session內的key
-	// 	 window.onload = function () {
-	//     if (localStorage.getItem("email") && localStorage.getItem("password")) {
-	//       loginemail.value = localStorage.getItem("email");
-	//       loginpassword.value = localStorage.getItem("password");
-	//       save-pass.checked = true;
-	//     }
-	//   }
+	// to do list 完成被勾選要記住帳號密碼&沒被勾選要清空
+	var checksave = false;
+	 email.value = localStorage.getItem(email);
+     password.value = localStorage.getItem(password);
 
-
+	
 	// 記住帳密開始
 	$('#save-pass').on('change', () => {
-		consle.log(save - pass);
-		if (save - pass.checked) {
-			console.log('Checkbox 被勾選了');
-		} else {
-			console.log('Checkbox 被取消勾選了');
-			localStorage.removeItem("email");
-			localStorage.removeItem("password");
+    if ($('#save-pass').prop('checked')) {
+        console.log('Checkbox 被勾選了');
+        localStorage.setItem('email', email.value);
+        localStorage.setItem('password', password.value);
+        checksave = true;
+        localStorage.setItem('checksave', true);
+    } else {
+        console.log('Checkbox 被取消勾選了');
+        localStorage.removeItem('email');
+        localStorage.removeItem('password');
+        checksave = false;
+        localStorage.removeItem('checksave');
+        email.value="";
+        password.value="";
+        console.log(email.value);
+        console.log(password.value);
 		}
 	});
 	// 記住帳密結束
 
-
-	debugger;
 	// 一般登入開始
 	$('button#btn_login').on('click', () => {
 		googleshow = false;
@@ -273,19 +276,22 @@
 	});
 	// 一般登入結束
 
+	
 	// Google登入開始
 	$('#btn_googlelogin').on("click", () => {
 		localStorage.setItem('btngooglelogin', 'true');
 		googlebtn = true;
+		localStorage.setItem("btn_google", true);
 		console.log("Google登入按鈕觸發");
 		// 先跳轉到 Google 認證頁面
 		location.href = "http://localhost:8080/chill-tribe/anotherOauthLogin";
 	});
 	// Google登入結束
 
+	if (localStorage.getItem("btn_google") == "true") {
+		localStorage.setItem("btn_google", false);
 	// Google查詢開始
-	window.onload = function () {
-		// 		    debugger;
+// 	window.onload = function () {
 		fetch(`http://localhost:8080/chill-tribe/googlelogin/findGoogleEmail`)
 			.then(response => {
 				return response.json();
@@ -300,7 +306,6 @@
 					//                 sessionStorage.setItem('name', data.name);
 					//             	sessionStorage.setItem('Access Token:', data.access_token);
 					setmembername(data.memberid);
-					// 		                debugger;
 					if (localStorage.getItem('btngooglelogin') == 'true') {
 						if (sessionStorage.getItem('GoogleEmail') == null) {
 							localStorage.setItem('btngooglelogin', 'false');
@@ -322,6 +327,7 @@
 				console.error("錯誤:", error);
 			});
 	};
+// 	}
 	// Google查詢結束
 
 
