--- a/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
@@ -1,5 +1,5 @@
 <div class="nav-header">
-	<a class="nav-brand text-logo" id="member_logo_href" href="#">
+	<a class="nav-brand text-logo" id="member_logo_href" href="/chilltribe.html">
 		<img src="../star-logo-nobg.png" style="width: 40px; height: 40px;"/>
 		<h5 class="fs-3 fw-bold ms-1 my-0">ChillTribe</h5>
 	</a>
