modify order-info bug

--- a/src/main/webapp/WEB-INF/order/order-info.html
+++ b/src/main/webapp/WEB-INF/order/order-info.html
@@ -82,12 +82,16 @@
 							<div class="agency-content">
 								<div class="agency-name">
 									<h4><a href="agency-page.html" id="activity-name">活動名稱</a></h4>
-									<span><i class="lni-map-marker"></i>訂單編號：</span><span id="order-serial">ORD00001
-									</span>
+									<span>訂單編號：</span><b id="order-serial" style="color: darkblue;">ORD00001
+									</b>
 								</div>
 
 								<div id="activity-desc">
-									<p>活動說明活動說明活動說明活動說明活動說明活動說明活動說明活動說明</p>
+									<span>活動說明活動說明活動說明活動說明活動說明活動說明活動說明活動說明</span>
+								</div>
+
+								<div style="height: 1rem;">
+									<span></span>
 								</div>
 
 								<div class="prt-detios">
@@ -136,8 +140,9 @@
 									<li><strong>縣市區域</strong><span id="city-district">臺北市大安區</span></li>
 									<li><strong>地址</strong><span id="act-location">忠孝東路一段</span></li>
 									<li><strong>成團</strong><span id="group-status">是</span></li>
-									<li><strong>開始時間</strong><span id="actStartDateTime">2025-02-15 10:00</span></li>
-									<li><strong>結束時間</strong><span id="actStartDateTime">2025-02-15 12:00</span></li>
+									<li><strong>活動開始時間</strong><span id="actStartDateTime">2025-02-15 10:00</span></li>
+									<li><strong>活動結束時間</strong><span id="actEndDateTime">2025-02-15 12:00</span></li>
+									<li><strong>訂單成立時間</strong><span id="orderCreatedTime">2025-02-15 12:00</span></li>
 								</ul>
 							</div>
 
