--- a/src/main/webapp/WEB-INF/supplier/edit-activity.html
+++ b/src/main/webapp/WEB-INF/supplier/edit-activity.html
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <!-- 圖片預覽區域 -->
-                <div id="previewContainer" class="d-flex flex-wrap mt-3"></div>
+                <div id="previewContainer" class="d-flex flex-wrap mt-3" style="gap: 10px;"></div>></div>
               </div>
               <!-- /.card-body -->
               <div class="card-footer d-flex justify-content-end">
