--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -434,7 +434,7 @@
 												
 												<div class="col-lg-12 col-md-12 col-sm-12">
 													<div class="form-group">
-														<textarea id="content" class="form-control ht-80" placeholder="Messages">
+														<textarea id="content" class="form-control">
 
 														</textarea>
 													</div>
