Add member address is add edit show OK.

--- a/src/main/webapp/WEB-INF/member/member-addresses.html
+++ b/src/main/webapp/WEB-INF/member/member-addresses.html
@@ -317,14 +317,14 @@
 
 
 
-		debugger;
+// 		debugger;
 		fetch(`findaddress/${memberid}`)
 			.then(resp => resp.json())
 			.then(member => {
 				console.log(member);
 				member_id.value = member.member_id;
 				address_member_id.value = member.member_id;
-				zip_code_1.textContent = member.zip_code;
+				zip_code_1.textContent = member.district_id;
 				console.log('zip_code_1：' + zip_code_1.textContent);
 				district_id_1.textContent = member.district_id;
 				console.log('district_id_1：' + district_id_1.textContent);
@@ -334,7 +334,9 @@
 				console.log('address_1：' + address_1.textContent);
 				tag_1.textContent = member.tag;
 				console.log('tag_1：' + tag_1.textContent);
-				city_district_1.textContent = `${member.city_name}${member.district_name}`;
+				console.log(member.city_name);
+				console.log(member.district_name);
+				city_district_1.textContent = `${member.city_name}  ${member.district_name}`;
 				console.log('city_district_1：' + city_district_1.textContent);
 				console.log('address_default_1：' + address_default_1.textContent);
 
