add import GA API for member header*2

--- a/src/main/webapp/WEB-INF/member/header.html
+++ b/src/main/webapp/WEB-INF/member/header.html
@@ -6,76 +6,97 @@
 	<div class="container">
 		<nav id="navigation" class="navigation navigation-landscape">
 			<div class="nav-header">
-				<a class="nav-brand text-logo" id="logo_href" href="/chilltribe.html">
-					<img src="./star-logo-nobg.png" style="width: 40px; height: 40px;"/>
+				<a class="nav-brand text-logo" id="logo_href"
+					href="/chilltribe.html"> <img src="./star-logo-nobg.png"
+					style="width: 40px; height: 40px;" />
 					<h5 class="fs-3 fw-bold ms-1 my-0">ChillTribe</h5>
 				</a>
 				<div class="nav-toggle"></div>
 				<div class="mobile_nav">
 					<ul>
-						<li><a href="JavaScript:Void(0);" data-bs-toggle="modal" data-bs-target="#login"
-								class="text-muted"> <span class="svg-icon svg-icon-2hx"> <svg width="35" height="35"
-										viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<li><a href="JavaScript:Void(0);" data-bs-toggle="modal"
+							data-bs-target="#login" class="text-muted"> <span
+								class="svg-icon svg-icon-2hx"> <svg width="35"
+										height="35" viewBox="0 0 18 18" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
 										<path opacity="0.3"
 											d="M16.5 9C16.5 13.125 13.125 16.5 9 16.5C4.875 16.5 1.5 13.125 1.5 9C1.5 4.875 4.875 1.5 9 1.5C13.125 1.5 16.5 4.875 16.5 9Z"
 											fill="currentColor" />
 										<path
 											d="M9 16.5C10.95 16.5 12.75 15.75 14.025 14.55C13.425 12.675 11.4 11.25 9 11.25C6.6 11.25 4.57499 12.675 3.97499 14.55C5.24999 15.75 7.05 16.5 9 16.5Z"
 											fill="currentColor" />
-										<rect x="7" y="6" width="4" height="4" rx="2" fill="currentColor" />
+										<rect x="7" y="6" width="4" height="4" rx="2"
+											fill="currentColor" />
 									</svg>
-								</span>
-							</a></li>
+							</span>
+						</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="nav-menus-wrapper" style="transition-property: none;">
 				<ul class="nav-menu">
 
-					<li class="active"><a id="index_href" href="../chilltribe.html">首頁<span
-								class="submenu-indicator"></span></a></li>
+					<li class="active"><a id="index_href"
+						href="../chilltribe.html">首頁<span class="submenu-indicator"></span></a></li>
 
-					<li><a id="index_href_search-activities" href="../activity/search-activities.html">活動列表<span class="submenu-indicator"></span></a></li>
+					<li><a id="index_href_search-activities"
+						href="../activity/search-activities.html">活動列表<span
+							class="submenu-indicator"></span></a></li>
 
-					<li><a id="index_href_contact" href="../general-info/contact.html">客服中心<span class="submenu-indicator"></span></a></li>
+					<li><a id="index_href_contact"
+						href="../general-info/contact.html">客服中心<span
+							class="submenu-indicator"></span></a></li>
 
-					<li><a id="index_href_faq" href="../general-info/faq.html">常見問題<span class="submenu-indicator"></span></a></li>
+					<li><a id="index_href_faq" href="../general-info/faq.html">常見問題<span
+							class="submenu-indicator"></span></a></li>
 
-					<li><a id="index_href_about" href="../general-info/about-us.html">關於我們<span class="submenu-indicator"></span></a></li>
+					<li><a id="index_href_about"
+						href="../general-info/about-us.html">關於我們<span
+							class="submenu-indicator"></span></a></li>
 
-					<li><a id="index_href_cart" href="./member/cart.html">購物車<span class="submenu-indicator"></span></a>
-					</li>
+					<li><a id="index_href_cart" href="./member/cart.html">購物車<span
+							class="submenu-indicator"></span></a></li>
 
 				</ul>
 
-				<ul class="nav-menu nav-menu-social align-to-right" id="login-register-menu">
-					<li class="add-listing light"><a href="JavaScript:void(0);" data-bs-toggle="modal"
-							data-bs-target="#login" class="fw-medium text-muted-2"> <span
-								class="svg-icon svg-icon-2hx me-1"> <svg width="22" height="22" viewBox="0 0 18 18"
-									fill="none" xmlns="http://www.w3.org/2000/svg">
+				<ul class="nav-menu nav-menu-social align-to-right"
+					id="login-register-menu">
+					<li class="add-listing light"><a href="JavaScript:void(0);"
+						data-bs-toggle="modal" data-bs-target="#login"
+						class="fw-medium text-muted-2"> <span
+							class="svg-icon svg-icon-2hx me-1"> <svg width="22"
+									height="22" viewBox="0 0 18 18" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
 									<path opacity="0.3"
 										d="M16.5 9C16.5 13.125 13.125 16.5 9 16.5C4.875 16.5 1.5 13.125 1.5 9C1.5 4.875 4.875 1.5 9 1.5C13.125 1.5 16.5 4.875 16.5 9Z"
 										fill="currentColor" />
 									<path
 										d="M9 16.5C10.95 16.5 12.75 15.75 14.025 14.55C13.425 12.675 11.4 11.25 9 11.25C6.6 11.25 4.57499 12.675 3.97499 14.55C5.24999 15.75 7.05 16.5 9 16.5Z"
 										fill="currentColor" />
-									<rect x="7" y="6" width="4" height="4" rx="2" fill="currentColor" />
+									<rect x="7" y="6" width="4" height="4" rx="2"
+										fill="currentColor" />
 								</svg>
-							</span>註冊或登錄
-						</a></li>
+						</span>註冊或登錄
+					</a></li>
 				</ul>
 
-				<ul class="nav-menu nav-menu-social align-to-right" id="logout-menu" style="display: none;">
+				<ul class="nav-menu nav-menu-social align-to-right" id="logout-menu"
+					style="display: none;">
 					<li>
 						<div class="btn-group account-drop">
-							<button type="button" class="btn btn-order-by-filt dropdown-toggle" id="showbutton"
-								data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<img id="member_header_photo_base64" src="https://placehold.co/500x500"
-									class="avater-img" alt="">您好！<span id="member_name"> </span>
+							<button type="button"
+								class="btn btn-order-by-filt dropdown-toggle" id="showbutton"
+								data-bs-toggle="dropdown" aria-haspopup="true"
+								aria-expanded="false">
+								<img id="member_header_photo_base64"
+									src="https://placehold.co/500x500" class="avater-img" alt="">您好！<span
+									id="member_name"> </span>
 							</button>
-							<div class="dropdown-menu pull-right animated flipInX" id="showing">
-								<a href="./member/member-details.html"><i class="fa-solid fa-gauge"></i>個人資料</a>
-								<a href=" " id="btn_logout"><i class="fa-solid fa-power-off"></i>登出</a>
+							<div class="dropdown-menu pull-right animated flipInX"
+								id="showing">
+								<a href="./member/member-details.html"><i
+									class="fa-solid fa-gauge"></i>個人資料</a> <a href=" " id="btn_logout"><i
+									class="fa-solid fa-power-off"></i>登出</a>
 							</div>
 						</div>
 					</li>
@@ -93,7 +114,8 @@
 
 
 
-<a id="back2Top" class="top-scroll" title="Back to top" href="#"><i class="ti-arrow-up"></i></a>
+<a id="back2Top" class="top-scroll" title="Back to top" href="#"><i
+	class="ti-arrow-up"></i></a>
 
 
 
@@ -199,3 +221,16 @@
 
 
 </script>
+
+		<!-- GA埋入開始 -->
+		<!-- Google tag (gtag.js) -->
+		<script async
+			src="https://www.googletagmanager.com/gtag/js?id=G-GM5P5XWVB2"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-GM5P5XWVB2');
+		</script>
+		<!-- GA埋入結束 -->
