add filter activity by category

--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Resido - Residence & Real Estate HTML Template</title>
+    <title>ChillTribe</title>
 
     <!-- Custom CSS -->
     <link href="Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
@@ -168,32 +168,32 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="container_categories_box margin-top-5 margin-bottom-30">
-                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
+                            <a href="#" class="utf_category_small_box_part act_category" >
                                 <i class="fas fa-skiing-nordic"></i>
                                 <h4>運動</h4>
                                 <!-- <span>08</span> -->
                             </a>
-                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
+                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part act_category">
                                 <i class="fa-solid fa-palette"></i>
                                 <h4>文藝</h4>
                                 <!-- <span>08</span> -->
                             </a>
-                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
+                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part act_category">
                                 <i class="fa-solid fa-gamepad"></i>
                                 <h4>娛樂</h4>
                                 <!-- <span>18</span> -->
                             </a>
-                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
+                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part act_category">
                                 <i class="fa-solid fa-music"></i>
                                 <h4>音樂</h4>
                                 <!-- <span>14</span> -->
                             </a>
-                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
+                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part act_category">
                                 <i class="fa-solid fa-utensils"></i>
                                 <h4>美食</h4>
                                 <!-- <span>22</span> -->
                             </a>
-                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
+                            <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part act_category">
                                 <i class="fa-solid fa-globe"></i>
                                 <h4>全部</h4>
                                 <!-- <span>20</span> -->
