--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -1286,7 +1286,7 @@
                 <!-- Pagination -->
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 text-center mt-4">
-                        <a href="listings-list-with-sidebar.html" class="btn btn-primary px-lg-5 rounded">更多活動</a>
+                        <a href='http://localhost:8080/chill-tribe/activity/search-activities.html?search-activity-name=&category=all&region=all' class="btn btn-primary px-lg-5 rounded">更多活動</a>
                     </div>
                 </div>
 
