--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -1318,7 +1318,7 @@
                                 <span>16 </span> Locations
                             </div> -->
                             <div class="listing-item-grid_title">
-                                <h3><a href="listing.html">台北</a></h3>
+                                <h3><a href="#" class="city-filter" data-value="臺北市">台北</a></h3>
                                 <p>
                                     多元活力交匯，找到志同道合的夥伴
                                 </p>
@@ -1335,7 +1335,7 @@
                                 <span>22 </span> Locations
                             </div> -->
                             <div class="listing-item-grid_title">
-                                <h3><a href="listing.html">台中</a></h3>
+                                <h3><a href="#" class="city-filter" data-value="臺中市">台中</a></h3>
                                 <p>
                                     創意與熱情匯聚，參與精彩活動一起成長
                                 </p>
@@ -1352,7 +1352,7 @@
                                 <span>9 </span> Locations
                             </div> -->
                             <div class="listing-item-grid_title">
-                                <h3><a href="listing.html">台南</a></h3>
+                                <h3><a href="#" class="city-filter" data-value="臺南市">台南</a></h3>
                                 <p>
                                     歷史與創新並存，體驗豐富多元的交流
                                 </p>
@@ -1369,7 +1369,7 @@
                                 <span>12 </span> Locations
                             </div> -->
                             <div class="listing-item-grid_title">
-                                <h3><a href="listing.html">高雄</a></h3>
+                                <h3><a href="#" class="city-filter" data-value="高雄市">高雄</a></h3>
                                 <p>
                                     南台灣的熱情舞台，和夥伴一起開創新體驗
                                 </p>
@@ -1386,7 +1386,7 @@
                                 <span>33 </span> Locations
                             </div> -->
                             <div class="listing-item-grid_title">
-                                <h3><a href="listing.html">花蓮</a></h3>
+                                <h3><a href="#" class="city-filter" data-value="花蓮縣">花蓮</a></h3>
                                 <p>
                                     山海間的獨特聚會，探索屬於你的精彩時刻
                                 </p>
