modify time format and search-activity part of frontend

--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>ChillTribe</title>
+    <link rel="icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
+	<link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
 
     <!-- Custom CSS -->
     <link href="Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
