--- a/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
+++ b/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>ChillTribe - 購物車列表</title>
-	<link rel="icon" href="/chill-tribe/tribe-temp.jpg" type="image/jepg">
-    <link rel="shortcut icon" href="/chill-tribe/tribe-temp.jpg" type="image/jepg">
+	<link rel="icon" href="/chill-tribe/star-logo-nobg.png" type="image/jepg">
+	<link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/jepg">
 
 	<!-- Custom CSS -->
 	<link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
