--- a/src/main/webapp/WEB-INF/activity/search-activities.html
+++ b/src/main/webapp/WEB-INF/activity/search-activities.html
@@ -5,7 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<title>Resido - Residence & Real Estate HTML Template</title>
+	<title>ChillTribe - 活動查詢</title>
+	<link rel="icon" href="/chill-tribe/star-logo-nobg.png" type="image/jepg">
+	<link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/jepg">
 
 	<!-- Custom CSS -->
 	<link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
@@ -57,18 +59,18 @@
 
 				<div class="row m-0">
 					<div class="short_wraping">
-						<div class="row align-items-center">
+						<div class="row">
 
-							<div class="col-lg-7 col-md-12 col-sm-12 order-lg-2 order-md-3 elco_bor col-sm-12">
+							<!-- <div class="col-lg-7 col-md-18 col-sm-12 order-lg-2 order-md-3 elco_bor col-sm-12"> -->
 								<!-- <div class="shorting_pagination"> -->
-									<div class="shorting_pagination text-center">
+									<div class="text-end">
 										<!-- 這邊要改成顯示搜尋結果數量 -->
-										<h5>顯示 1-25 of 72 結果</h5>
+										<h5 id="result-count">顯示 1-25 of 72 結果</h5>
 									</div>
 								<!-- </div> -->
-							</div>
+							<!-- </div> -->
 
-							<div class="col-lg-3 col-md-6 col-sm-12 order-lg-3 order-md-2 col-sm-6 pe-0">
+							<!-- <div class="col-lg-3 col-md-6 col-sm-12 order-lg-3 order-md-2 col-sm-6 pe-0">
 								<div class="shorting-right">
 									<label class="me-2">價格排序:</label>
 									<div class="shorting-by border rounded">
@@ -79,7 +81,7 @@
 										</select>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 						</div>
 					</div>
@@ -294,7 +296,7 @@
 												<h4>
 													<a href="#fptype" data-bs-toggle="collapse" aria-expanded="false"
 														role="button" class="collapsed">活動種類<span
-															class="selected">Apartment</span></a>
+															class="selected">選擇</span></a>
 												</h4>
 
 											</div>
@@ -309,43 +311,36 @@
 																		<input id="c1" class="form-check-input"
 																			name="ptype" type="radio">
 																		<label for="c1"
-																			class="form-check-label">House</label>
+																			class="form-check-label">運動</label>
 																	</li>
 																	<li class="form-check">
 																		<input id="c2" class="form-check-input"
 																			name="ptype" type="radio">
-																		<label for="c2" class="form-check-label">Office
-																			Desk</label>
+																		<label for="c2" class="form-check-label">文藝</label>
 																	</li>
 																	<li class="form-check">
 																		<input id="c3" class="form-check-input"
 																			name="ptype" type="radio">
 																		<label for="c3"
-																			class="form-check-label">Villa</label>
+																			class="form-check-label">娛樂</label>
 																	</li>
 																	<li class="form-check">
 																		<input id="c4" class="form-check-input"
 																			name="ptype" type="radio" checked>
 																		<label for="c4"
-																			class="form-check-label">Apartment</label>
+																			class="form-check-label">音樂</label>
 																	</li>
 																	<li class="form-check">
 																		<input id="c5" class="form-check-input"
 																			name="ptype" type="radio">
 																		<label for="c5"
-																			class="form-check-label">Condo</label>
+																			class="form-check-label">美食</label>
 																	</li>
 																	<li class="form-check">
 																		<input id="c6" class="form-check-input"
 																			name="ptype" type="radio">
 																		<label for="c6"
-																			class="form-check-label">Denver</label>
-																	</li>
-																	<li class="form-check">
-																		<input id="c7" class="form-check-input"
-																			name="ptype" type="radio">
-																		<label for="c7"
-																			class="form-check-label">Studio</label>
+																			class="form-check-label">全部</label>
 																	</li>
 																</ul>
 															</div>
@@ -356,7 +351,7 @@
 										</div>
 
 										<!-- Single Search -->
-										<div class="single_search_boxed">
+										<!-- <div class="single_search_boxed">
 											<div class="widget-boxed-header">
 												<h4>
 													<a href="#fprice" data-bs-toggle="collapse" aria-expanded="false"
@@ -367,7 +362,7 @@
 											</div>
 											<div class="widget-boxed-body collapse" id="fprice" data-parent="#fprice">
 												<div class="side-list no-border">
-													<!-- Single Filter Card -->
+
 													<div class="single_filter_card">
 														<div class="card-body pt-0">
 															<div class="inner_widget_link">
@@ -420,7 +415,7 @@
 													</div>
 												</div>
 											</div>
-										</div>
+										</div> -->
 
 									</div>
 
@@ -696,7 +691,7 @@
 						</div>
 
 						<!-- Pagination -->
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12">
 								<ul class="pagination p-center">
 									<li class="page-item">
@@ -718,7 +713,7 @@
 									</li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 
 					</div>
 
